extend pynotifyd.conf documentation

--- a/pynotifyd.conf
+++ b/pynotifyd.conf
@@ -1,9 +1,14 @@
 [general]
 # Define a directory for spool files
 queuedir = /var/spool/pynotifyd/
-# Define a list of services to try in order. Numbers are simply wait intervals in n seconds
+# Define a list of providers to try in the given order.
+#  * A number tells the daemon to delay processing the message for the given number of seconds.
+#  * A non-number are subsection names from the providers section.
 retry = jabber,1,jabber,1,tmobile, 1, tmobile, 1, yapsssh, 1, yapsssh, 1, yapsssh, GIVEUP
 # Define which notification for new files in spool dir to be used. 
+#  * inotify: The daemon watches the spool directory with Linux intoify.
+#  * signal: The daemon periodically checks the spool directory and can be
+#            triggered via a SIGUSR1 signal.
 notify = inotify
 # If set: modify argv[0] to be this string in the daemon. (Useful for snmpd)
 proctitle = pynotifyd
@@ -77,5 +82,7 @@ subject = Error sending PyNotifyD message
 [[mock]]
 driver = mock
 # deliveries fail randomly, message is ignored.
+# Options: random, permanent, temporary, success
 failtype = random
-
+# Impose a delay in seconds on processing the message.
+# duration = 3
