pynotifyd.conf: clarify queuedir

--- a/pynotifyd.conf
+++ b/pynotifyd.conf
@@ -1,5 +1,5 @@
 [general]
-# Define a directory for spool files
+# Define a directory for spool files (must be absolute)
 queuedir = /var/spool/pynotifyd/
 # Define a list of providers to try in the given order.
 #  * A number tells the daemon to delay processing the message for the given number of seconds.
