support sipgate team api

--- a/pynotifyd.conf
+++ b/pynotifyd.conf
@@ -51,6 +51,7 @@ sender = +496666
 driver = sipgate
 username = foo
 password = bar
+api = basic
 
 # Command line call for very old yaps ISDN SMS sending software
 [[yaps]]
