pynotifyd.conf: added comment about persistentjabber

--- a/pynotifyd.conf
+++ b/pynotifyd.conf
@@ -67,6 +67,7 @@ command = ssh -i /etc/nagios3/id_rsa root@$yapshost yaps %(contact:phone)s %(mes
 # Jabber/XMPP Message sending
 [[jabber]]
 driver = jabber
+# driver = persistentjabber # if you do not want to connect for each delivery
 jid = someone@jabberhost.com/$hostname
 password = bar
 timeout = 10
