Add coding and shebang line

--- a/pynotifyd.conf
+++ b/pynotifyd.conf
@@ -1,17 +1,21 @@
 [general]
 # Define a directory for spool files (must be absolute)
 queuedir = /var/spool/pynotifyd/
+
 # Define a list of providers to try in the given order.
 #  * A number tells the daemon to delay processing the message for the given number of seconds.
 #  * A non-number are subsection names from the providers section.
-retry = jabber,1,jabber,1,tmobile, 1, tmobile, 1, yapsssh, 1, yapsssh, 1, yapsssh, GIVEUP
+retry = jabber,1,jabber,1,tmobile,1,sipgate,1,yapsssh,1,yapsssh,1,yapsssh,GIVEUP
+
 # Define which notification for new files in spool dir to be used. 
 #  * inotify: The daemon watches the spool directory with Linux intoify.
 #  * signal: The daemon periodically checks the spool directory and can be
 #            triggered via a SIGUSR1 signal.
 notify = inotify
+
 # If set: modify argv[0] to be this string in the daemon. (Useful for snmpd)
 proctitle = pynotifyd
+
 # Change the group of the daemon (either by number or by name).
 # chgid = pynotifyd
 # Change the user of the daemon (number or name).
@@ -29,14 +33,8 @@ jabber_include_states = "online, dnd"
 # Set a phone number to be used for sms services
 phone = +49666666666
 
-[[username2]]
-jabber = someoneother@jabberserver.local
-jabber_exclude_resources = myhostname
-phone = +49666666661
-
-[providers]
 # Definition of providers for sending notifications
-
+[providers]
 # Developergarden T-Mobile SendSMS Interface
 [[tmobile]]
 driver = developergarden
@@ -47,7 +45,7 @@ password = bar
 sender = +496666
 
 # sipgate.de SMS sending
-[[sg]]
+[[sipgate]]
 driver = sipgate
 username = foo
 password = bar
@@ -86,5 +84,6 @@ driver = mock
 # deliveries fail randomly, message is ignored.
 # Options: random, permanent, temporary, success
 failtype = random
+
 # Impose a delay in seconds on processing the message.
 # duration = 3
