Improved pynotifyd.conf example

--- a/pynotifyd.conf
+++ b/pynotifyd.conf
@@ -5,7 +5,7 @@ queuedir = /var/spool/pynotifyd/
 # Define a list of providers to try in the given order.
 #  * A number tells the daemon to delay processing the message for the given number of seconds.
 #  * A non-number are subsection names from the providers section.
-retry = jabber,1,jabber,1,tmobile,1,sipgate,1,yapsssh,1,yapsssh,1,yapsssh,GIVEUP
+retry = jabber,3,smstrade,3,sipgate,GIVEUP
 
 # Define which notification for new files in spool dir to be used. 
 #  * inotify: The daemon watches the spool directory with Linux intoify.
@@ -23,18 +23,47 @@ proctitle = pynotifyd
 
 [contacts]
 # define contacts here
+
 [[username]]
 # set jabber id of user
 jabber = someone@jabberserver.local
+
 # do not send any messages if only the following ressources are online
 jabber_exclude_resources = ipad
+
 # Include specific states to send jabber notifications to
 jabber_include_states = "online, dnd"
+
 # Set a phone number to be used for sms services
 phone = +49666666666
 
 # Definition of providers for sending notifications
 [providers]
+
+# Jabber/XMPP Message sending
+[[jabber]]
+driver = jabber
+# driver = persistentjabber # if you do not want to connect for each delivery
+jid = someone@jabberhost.com/$hostname
+password = bar
+timeout = 10
+
+# sipgate.de SMS sending
+[[sipgate]]
+driver = sipgate
+username = foo
+password = bar
+api = basic
+
+# smstrade SMS sending
+[[smstrade]]
+driver = smstrade
+route = gold
+key = APIKEY
+# Sender must be registered non-international phone number
+sender = 01666666666
+
+
 # Developergarden T-Mobile SendSMS Interface
 [[tmobile]]
 driver = developergarden
@@ -43,13 +72,6 @@ username = foo
 password = bar
 # A specific sender number. Needs to be registered before using developergarden_ctl
 sender = +496666
-
-# sipgate.de SMS sending
-[[sipgate]]
-driver = sipgate
-username = foo
-password = bar
-api = basic
 
 # Command line call for very old yaps ISDN SMS sending software
 [[yaps]]
@@ -61,14 +83,6 @@ command = yaps %(contact:phone)s %(message)s
 driver = shell
 yapshost = 10.0.0.123
 command = ssh -i /etc/nagios3/id_rsa root@$yapshost yaps %(contact:phone)s %(message)s
-
-# Jabber/XMPP Message sending
-[[jabber]]
-driver = jabber
-# driver = persistentjabber # if you do not want to connect for each delivery
-jid = someone@jabberhost.com/$hostname
-password = bar
-timeout = 10
 
 # E-Mail error handler. Might be used as last in retry to finally send e mail
 [[errorhandler]]
