--- a/debian/control
+++ b/debian/control
@@ -1,16 +1,15 @@
 Source: pynotifyd
 Maintainer: Torge Szczepanek <debian@cygnusnetworks.de>
-Standards-Version: 3.8.0
+Standards-Version: 3.9.5
 Section: python
 Priority: extra
-Build-Depends: debhelper (>= 7), python, python-setuptools
-XS-Python-Version: >= 2.5
+Build-Depends: debhelper (>= 9), python, python-setuptools
 
 Package: python-pynotifyd
 Architecture: all
-Depends: python (>= 2.5), python-configobj, ${python:Depends}, ${misc:Depends},
+Depends: python (>= 2.6), python-configobj, ${python:Depends}, ${misc:Depends},
 XB-Python-Version: ${python:Versions}
-Recommends: python-setproctitle, python-pyinotify, python-pyxmpp, python-cjson | python-json | python (>= 2.6)
+Recommends: python-setproctitle, python-pyinotify, python-pyxmpp, python-gsmsapi, python-phonenumbers
 Description: Python Notification Daemon
  The daemon allows you to send a message to a contact via jabber, email or sms
  whatever fits best. It is intended for use with Nagios.
