--- a/debian/control
+++ b/debian/control
@@ -8,7 +8,7 @@ Build-Depends: debhelper (>= 9), python, python-setuptools
 Package: python-pynotifyd
 Architecture: all
 Depends: python (>= 2.6), python-configobj, ${python:Depends}, ${misc:Depends},
-XB-Python-Version: ${python:Versions}
+X-Python-Version: >= 2.6
 Recommends: python-setproctitle, python-pyinotify, python-pyxmpp, python-gsmsapi, python-phonenumbers
 Description: Python Notification Daemon
  The daemon allows you to send a message to a contact via jabber, email or sms
