--- a/debian/control
+++ b/debian/control
@@ -1,13 +1,13 @@
 Source: pynotifyd
 Maintainer: Torge Szczepanek <debian@cygnusnetworks.de>
-Standards-Version: 3.9.5
+Standards-Version: 3.9.4
 Section: python
 Priority: extra
-Build-Depends: debhelper (>= 9), python, python-setuptools
+Build-Depends: debhelper (>= 9), python-all, python-setuptools
 
 Package: python-pynotifyd
 Architecture: all
-Depends: python (>= 2.6), python-configobj, ${python:Depends}, ${misc:Depends},
+Depends: python-configobj, python-setproctitle, python-gsmsapi, python-phonenumbers, python-inotify, python-pyxmpp, ${python:Depends}, ${misc:Depends},
 X-Python-Version: >= 2.6
 Recommends: python-setproctitle, python-pyinotify, python-pyxmpp, python-gsmsapi, python-phonenumbers
 Description: Python Notification Daemon
